# snapcrab

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  test-installer.yml
cargo-snap/: Cargo.toml
cargo-snap/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  developer.md  getting-started.md  native-calls.md  next-steps.md  welcome.md
snapcrab/: Cargo.toml  build.rs
snapcrab-installer/: Cargo.toml
snapcrab-installer/src/: main.rs
snapcrab/src/: core.rs  heap.rs  interpreter.rs  lib.rs  main.rs  memory.rs  runner.rs  stack.rs  ty.rs  value.rs
snapcrab/src/interpreter/: check.rs  function.rs  intrinsics.rs  native.rs  place.rs  rvalue.rs
snapcrab/src/interpreter/native/: jit.rs  x86_64.rs
snapcrab/src/memory/: heap.rs  sanitizer.rs  stack.rs  statics.rs
snapcrab/tests/: integration_tests.rs
snapcrab/tests/common/: mod.rs
snapcrab/tests/inputs/: arithmetic.rs  array_test.rs  bool_function.rs  cast.rs  char_test.rs  custom_start.rs  diagnostic_test.rs  function_call.rs  function_with_args.rs  generic_function.rs  libc_call.rs  raw_pointer_test.rs  reference_test.rs  simple_main.rs  size_align_test.rs  slice_patterns.rs  slice_test.rs  static_data.rs  str_test.rs  struct_empty.rs  struct_generic.rs  struct_nested.rs  struct_single.rs  tuple_function.rs  tuple_operations.rs  union_test.rs  unsized_coercion.rs  unwrap_panic.rs  valid_custom_start.rs  wide_ptr.rs
snapcrab/tests/inputs/enum/: basic.rs  fieldless.rs  mixed_variants.rs  niche.rs  repr.rs  single_variant.rs  struct_variants.rs  tuple_variants.rs
snapcrab/tests/inputs/intrinsics/: transmute_invalid.rs  transmute_valid.rs
snapcrab/tests/inputs/native/: call_array2.rs  call_basic.rs  call_dep_math.rs  call_rust_abi.rs  call_structs.rs  dep_math.rs  dep_rust_abi.rs  lib_array2.rs  lib_basic.rs  lib_structs.rs
snapcrab/tests/inputs/std_ops/: cmp.rs  numeric.rs  option.rs  result.rs
snapcrab/tests/integration_tests/: enum_tests.rs  intrinsics_tests.rs  native_tests.rs  std_tests.rs
