[workspace]
members = [
    "snapcrab",
    "cargo-snap",
    "snapcrab-installer",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Celina G. Val"]
license = "Apache-2.0 OR MIT"
edition = "2024"
repository = "https://github.com/celinval/snapcrab"
homepage = "https://celinval.github.io/snapcrab/"
rust-version = "1.97.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cranelift = { version = "0.133.1", features = ["native"] }
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
libc = "0.2"
num-traits = "0.2"
regex = "1.0"
smallvec = { version = "1.0", features = ["const_new"] }
target-lexicon = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = "0.8"
