[package]
name = "snapcrab"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "snapcrab"
path = "src/main.rs"

[lib]
name = "snapcrab"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
zerocopy = "0.8.27"
smallvec = { version = "1.0", features = ["const_new"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
regex = "1.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
rustc_private = true
