[package]
name = "snapcrab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Experimental Rust interpreter for rapid development iteration"
categories = ["development-tools", "command-line-utilities"]
keywords = ["interpreter", "rust", "testing", "development"]
include = [
    "src/**/*",
    "tests/**/*",
    "../Cargo.lock",
    "../README.md",
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
]

[[bin]]
name = "snapcrab"
path = "src/main.rs"

[lib]
name = "snapcrab"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
zerocopy = "0.8.27"
smallvec = { version = "1.0", features = ["const_new"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num-traits = "0.2.19"

[dev-dependencies]
regex = "1.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
rustc_private = true
