[package]
name = "snapcrab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Experimental Rust interpreter for rapid development iteration"
categories = ["development-tools", "command-line-utilities"]
keywords = ["interpreter", "rust", "testing", "development"]
include = [
    "src/**/*",
    "tests/**/*",
    "../Cargo.lock",
    "../README.md",
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "../rust-toolchain.toml",
]

[[bin]]
name = "snapcrab"
path = "src/main.rs"

[lib]
name = "snapcrab"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
num-traits.workspace = true
smallvec.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zerocopy.workspace = true

[dev-dependencies]
regex.workspace = true

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
rustc_private = true
